Closed Bug 481318 Opened 16 years ago Closed 16 years ago

[FIX]Anchor URI-mutation functions do too much work

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Keywords: perf)

Attachments

(1 file)

They get the URI object, serialize it to a string, create a new URI object from that string, mutate it, serialize it to a string, and call SetAttribute with the result. That's silly. Fix coming up.
Blocks: 481131
Keywords: perf
Attached patch Like so, saySplinter Review
Attachment #365372 - Flags: superreview?(jst)
Attachment #365372 - Flags: review?(jst)
Comment on attachment 365372 [details] [diff] [review] Like so, say Looks good. r+sr=jst
Attachment #365372 - Flags: superreview?(jst)
Attachment #365372 - Flags: superreview+
Attachment #365372 - Flags: review?(jst)
Attachment #365372 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Component: Content → DOM
QA Contact: content → general
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: