Bug 481318.  Don't serialize then reparse the URI on anchor property mutations.  r+sr=jst